--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,7 +16,7 @@
   --color-charcoal-200: #e0e2e5;
   --color-charcoal-300: #c3c5c8;
   --color-charcoal-400: #a6a9ac;
-  --color-precognis-500: #3f4245;
+  --color-charcoal-500: #3f4245;
   --color-charcoal-600: #5a5e61;
   --color-charcoal-700: #373b3d;
   --color-charcoal-800: #212529;
